--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Nuevo.cshtml
@@ -447,7 +447,7 @@
                     <div class="col-md-12">
                         <div class="form-group">
                             <label for="IdPersona">Beneficiario*</label>
-                            @Html.Partial("_ComboPersona")
+                            @Html.Partial("_CmbPersona_ConciliacionCaja", Model)
                             @Html.ValidationMessageFor(q => q.IdEntidad, "", new { @class = "text-danger" })
                         </div>
                     </div>
