--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Anular.cshtml
@@ -289,9 +289,9 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="num_docu_Modificar">Autorización*</label>
-                                @Html.TextBoxFor(q => q.num_docu_Modificar, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(q => q.num_docu_Modificar, "", new { @class = "text-danger" })
+                                <label for="Num_Autorizacion">Autorización*</label>
+                                @Html.TextBoxFor(q => q.Num_Autorizacion, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.aut_doc_Modificar, "", new { @class = "text-danger" })
                             </div>
                         </div>
                     </div>
@@ -299,6 +299,38 @@
 
             </div>
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_informacion_pago">
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label for="info_forma_pago.codigo_pago_sri">Forma Pago*</label>
+                                @Html.DevExpress().ComboBoxFor(q => q.info_forma_pago.codigo_pago_sri, settings =>
+                                   {
+                                       settings.Name = "info_forma_pago.codigo_pago_sri";
+                                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                       settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                                       settings.Properties.Columns.Add("codigo_pago_sri", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+                                       settings.Properties.Columns.Add("formas_pago_sri", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(90);
+
+
+                                       //Campo ID
+                                       settings.Properties.ValueField = "codigo_pago_sri";
+                                       settings.Properties.ValueType = typeof(string);
+                                       settings.Properties.TextField = "formas_pago_sri";
+                                       //Boton para seleccionar ningun registro
+                                       settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+                                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+
+                                   }).BindList(ViewBag.lst_forma_pago).GetHtml()
+                                @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-2">
@@ -434,6 +466,7 @@
             </div>
         </div>
     </div>
+
     <div class="box-footer">
         <button type="submit" class="btn btn-danger">Anular</button>
         <a class="btn btn-default" href="@Url.Action("Index","Deudas",new { Area = "CuentasPorPagar" },null)">Cancelar</a>
