--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_CmbPersona_ConciliacionCaja.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_CmbPersona_ConciliacionCaja.cshtml
@@ -6,19 +6,22 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "ConciliacionCaja", Action = "CmbPersona_ConciliacionCaja", Area = "Caja" };
-        settings.Properties.CallbackPageSize = 5;
-        settings.Properties.DropDownRows = 4;
+        settings.CallbackRouteValues = new { Controller = "ConciliacionCaja", Action = "CmbPersona_ConciliacionCaja", Area = "Caja", IdTipoPersona = ViewBag.IdTipoPersona };
+        settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pe_nombreCompleto";
         settings.Properties.TextFormatString = "[{0}] {1}";
-        settings.Properties.ValueField = "IdPersona";
+        settings.Properties.ValueField = "IdEntidad";
         settings.Properties.ValueType = typeof(decimal);
 
-        settings.Properties.Columns.Add("IdPersona", "ID", 10);
-        settings.Properties.Columns.Add("pe_nombreCompleto", "Persona", 90);
-
+        settings.Properties.Columns.Add("IdEntidad", "ID", 10);
+        settings.Properties.Columns.Add("pe_nombreCompleto", "Persona", 80);
+        settings.Properties.Columns.Add("IdPersona", "ID Persona", 10);
+        settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdTipoPersona'] = $('#IdTipoPersona').val(); }";
         //settings.Properties.ClientSideEvents.EndCallback = "OnEndCallbackCombo";
-    }).BindList(new Core.Erp.Bus.General.tb_persona_Bus().get_list_bajo_demanda, new Core.Erp.Bus.General.tb_persona_Bus().get_info_bajo_demanda);
+    })
+    .BindList(ViewBag.lst_persona)
+    .Bind(Model.IdEntidad);
+    
 }
 @comboBox.GetHtml()
