--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RetiroActivo/_GridViewPartial_retiro_activo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RetiroActivo/_GridViewPartial_retiro_activo.cshtml
@@ -85,14 +85,14 @@
         });
         settings.Columns.Add("Concepto_Retiro", "Observación").Width = System.Web.UI.WebControls.Unit.Percentage(40);
         settings.Columns.Add("Estado", "Estado").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-        settings.Columns.Add(column =>
-        {
-            column.SetDataItemTemplateContent(c =>
-            {
-                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ACTF_003", "ActivoFijoReportes", new { Area = "Reportes", IdRetiroActivo = DataBinder.Eval(c.DataItem, "IdRetiroActivo").ToString()}, Request.Url.Scheme) + "');\"></span>");
-            });
-            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
-        });
+        //settings.Columns.Add(column =>
+        //{
+        //    column.SetDataItemTemplateContent(c =>
+        //    {
+        //        ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ACTF_003", "ActivoFijoReportes", new { Area = "Reportes", IdRetiroActivo = DataBinder.Eval(c.DataItem, "IdRetiroActivo").ToString()}, Request.Url.Scheme) + "');\"></span>");
+        //    });
+        //    column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+        //});
     });
 }
 @grid.Bind(Model).GetHtml()
