--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_002.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_002.cshtml
@@ -51,53 +51,6 @@
                             @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="form-group">
-                            <label for="IdCliente">Cliente</label>
-                            @Html.DevExpress().ComboBoxFor(q => q.IdCliente, settings =>
-                         {
-                             settings.Name = "IdCliente";
-                             settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                             settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                             settings.Properties.Columns.Add("IdCliente", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                             settings.Properties.Columns.Add("Descripcion_tip_cliente", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                             //Campo ID
-                             settings.Properties.ValueField = "IdCliente";
-                             settings.Properties.ValueType = typeof(decimal);
-                             settings.Properties.TextField = "Descripcion_tip_cliente";
-                             //Boton para seleccionar ningun registro
-                             settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                             settings.Properties.NullText = "== Seleccione ==";
-                             settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                             settings.Properties.AllowNull = true;
-                         }).BindList(ViewBag.lst_cliente).GetHtml()
-                            @Html.ValidationMessageFor(q => q.IdCliente, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="col-md-3">
-                        <div class="form-group">
-                            <label for="IdSucursal">Tipo cliente</label>
-                            @Html.DevExpress().ComboBoxFor(q => q.IdClienteContacto, settings =>
-                         {
-                             settings.Name = "Idtipo_cliente";
-                             settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                             settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                             settings.Properties.Columns.Add("Idtipo_cliente", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                             settings.Properties.Columns.Add("Descripcion_tip_cliente", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                             //Campo ID
-                             settings.Properties.ValueField = "Idtipo_cliente";
-                             settings.Properties.ValueType = typeof(int);
-                             settings.Properties.TextField = "Descripcion_tip_cliente";
-                             //Boton para seleccionar ningun registro
-                             settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                             settings.Properties.NullText = "== Seleccione ==";
-                             settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                             settings.Properties.AllowNull = true;
-                         }).BindList(ViewBag.lst_tipo).GetHtml()
-                            @Html.ValidationMessageFor(q => q.IdClienteContacto, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
                     <div class="col-md-2">
                         <div class="form-group">
                             <label for="">Fecha corte *</label>
@@ -112,9 +65,60 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="IdCliente">Cliente</label>
+                            @Html.DevExpress().ComboBoxFor(q => q.IdCliente, settings =>
+                         {
+                             settings.Name = "IdCliente";
+                             settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                             settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                             settings.Properties.Columns.Add("IdCliente", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                             settings.Properties.Columns.Add("info_persona.pe_nombreCompleto", "Nombres").Width = System.Web.UI.WebControls.Unit.Percentage(50);
+                             //Campo ID
+                             settings.Properties.ValueField = "IdCliente";
+                             settings.Properties.ValueType = typeof(decimal);
+                             settings.Properties.TextField = "info_persona.pe_nombreCompleto";
+                             //Boton para seleccionar ningun registro
+                             settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
+                             settings.Properties.NullText = "== Seleccione ==";
+                             settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                             settings.Properties.AllowNull = true;
+                         }).BindList(ViewBag.lst_cliente).GetHtml()
+                            @Html.ValidationMessageFor(q => q.IdCliente, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="IdClienteContacto">Cliente contacto</label>
+                            @Html.DevExpress().ComboBoxFor(q => q.IdClienteContacto, settings =>
+                         {
+                             settings.Name = "IdClienteContacto";
+                             settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                             settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                             settings.Properties.Columns.Add("IdContacto", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                             settings.Properties.Columns.Add("Nombres", "Nombres").Width = System.Web.UI.WebControls.Unit.Percentage(50);
+                             //Campo ID
+                             settings.Properties.ValueField = "IdCliente";
+                             settings.Properties.ValueType = typeof(decimal);
+                             settings.Properties.TextField = "Nombres";
+                             //Boton para seleccionar ningun registro
+                             settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
+                             settings.Properties.NullText = "== Seleccione ==";
+                             settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                             settings.Properties.AllowNull = true;
+                         }).BindList(ViewBag.lst_contacto).GetHtml()
+                            @Html.ValidationMessageFor(q => q.IdClienteContacto, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!-- /.box-body -->
         </div>
-    </div>
+            </div>
     <div class="box">
         <div class="box-header with-border">
             <h3 class="box-title">@ViewBag.Title</h3>
