--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/TipoCodigoSRI/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/TipoCodigoSRI/Nuevo.cshtml
@@ -5,6 +5,7 @@
     {
         Response.Redirect("~/Account/Login");
     }
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @using (Html.BeginForm("Nuevo", "TipoCodigoSRI", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
