--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/Modificar.cshtml
@@ -130,10 +130,10 @@
         <div class="col-md-12">
             <div class="form-group">
                 <div class="form-group">
-                    <label for="rub_noafecta"></label>
-                    @Html.DevExpress().CheckBoxFor(q => q.rub_noafecta, settings =>
+                    <label for="rub_nocontab"></label>
+                    @Html.DevExpress().CheckBoxFor(q => q.rub_nocontab, settings =>
                        {
-                           settings.Name = "rub_noafecta";
+                           settings.Name = "rub_nocontab";
                            settings.Text = "Se contabiliza";
 
                        }).GetHtml()
